updated todo controller, HTML to get working app

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </head>
 
 <body>
-	<main data-controller="app">
+	<main data-controller="app" style="display:none">
 		<label for="name">Name
 			<input type="text" name="name" id="name" data-target="app.input" data-action="input->app#echo">
 		</label>
@@ -42,6 +42,29 @@
 				This is a
 				<code>&lt;dialog></code> element.
 			</dialog>
+		</section>
+	</main>
+	<main data-controller="todo" class="todo-app container">
+		<header>
+			<h1>Stimulus Todo</h1>
+		</header>
+		<section class="columns">
+			<form action="#!" method="GET" data-target="todo.todoForm" data-action="submit->todo#add" class="todo-form column col-4">
+				<label for="todo_text">
+					<span>Task:</span>
+					<input type="text" name="todo_text" id="todo_text" data-target="todo.todoText" data-action="input->todo#updateTodoText">
+				</label>
+				<button class="btn btn-primary" role="submit">Add task</button>
+			</form>
+			<table class="table table-striped todo-list column col-8" data-target="todo.todoList">
+				<thead>
+					<tr>
+						<th style="width:5em;">Done?</th>
+						<th>Task</th>
+					</tr>
+				</thead>
+				<tbody data-target="todo.todoTable"></tbody>
+			</table>
 		</section>
 	</main>
 	<script src="./src/index.js"></script>
